# src/routes/auth/auth.route.js
@@ -1,5 +1,6 @@
 const express = require('express')
 const AccessController = require('../../controllers/access.controller')
+const AuthService = require('../../services/auth.service')
 const AuthController = require('../../controllers/auth.controller')
 const router = express.Router()
 
@@ -9,5 +10,7 @@ router.post('/signup', AccessController.signUp)
 router.post('/login', AccessController.login)
 // refresh token
 router.post('/refreshToken', AuthController.handleRefreshToken)
+// logout
+router.post('/logout', AccessController.logout)
 
 module.exports = router
